<resources>
    <string name="app_name">HabitTracker3</string>
    <string name="habit_name">Enter name of the habit</string>
    <string name="description">Enter description of the habit</string>
    <string name="priority">Priority</string>
    <string name="useful">Useful</string>
    <string name="harmful">Harmful</string>
    <string name="type">Type</string>
    <string name="number_runs">Number of runs</string>
    <string name="frequency">Frequency of execution</string>
    <string-array name="spinner_values">
        <item>paramount</item>
        <item>secondary</item>
        <item>minor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- <string name="hello_blank_fragment">This is descriptions fragment</string> -->
    <string name="user_name">helena.ryabyh@gmail.com </string>
    <string name="nav_info">About application</string>
    <string name="nav_screen">Home screen</string>
    <string name="bottom_sheets">Bottom Sheets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
