<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HabitActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/habit_name"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priority"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/priority"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_values"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/type"/>


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_useful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useful"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radio_harmful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harmful"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/numberOfRuns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:inputType="number"
        android:hint="@string/number_runs"/>

    <EditText
        android:id="@+id/frequencyOfExecution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:inputType="number"
        android:hint="@string/frequency"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:onClick="onClickReadily"
        android:text="Readily"/>


</LinearLayout>
</ScrollView>