<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HabitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_name"
            android:padding="16dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/spinner_values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_useful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/useful" />
                    //android:onClick="onRadioButtonClicked"

                <RadioButton
                    android:id="@+id/radio_harmful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harmful" />
                    //android:onClick="onRadioButtonClicked"

            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/numberOfRuns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_runs"
            android:inputType="number"
            android:padding="16dp" />

        <EditText
            android:id="@+id/frequencyOfExecution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frequency"
            android:inputType="number"
            android:padding="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:id="@+id/button"
            android:text="Readily" />


    </LinearLayout>
</ScrollView>